--- a/lab01_AIML.ipynb
+++ b/lab01_AIML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8PzH2XtwAwHfwtqKgQmUQ",
+      "authorship_tag": "ABX9TyPUByG2sJviZOofUm8CxOLG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,16 +287,17 @@
       "source": [
         "print(\"sin of {array1}\", np.sin(array1))\n",
         "print(\"log of {array1}\", np.log(array1))\n",
-        "print(\"log2 of {array1}\", np.log2(array1))"
+        "print(\"log2 of {array1}\", np.log2(array1))\n",
+        "print(\"exp of {array1}\", np.exp(array1))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-3ZiL0PA_wb5",
-        "outputId": "fc7d7dce-aff6-4a82-cae5-5a70590244dd"
+        "outputId": "4bf0adfb-241d-4d0a-e6a1-ba448f0f90c9"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +305,8 @@
           "text": [
             "sin of {array1} [0.84147098 0.90929743 0.14112001]\n",
             "log of {array1} [0.         0.69314718 1.09861229]\n",
-            "log2 of {array1} [0.        1.        1.5849625]\n"
+            "log2 of {array1} [0.        1.        1.5849625]\n",
+            "exp of {array1} [ 2.71828183  7.3890561  20.08553692]\n"
           ]
         }
       ]
@@ -314,16 +316,17 @@
       "source": [
         "print(\"sin of {array2}\",np.sin(array2))\n",
         "print(\"log of {array2}\",np.log(array2))\n",
-        "print(\"log2 of {array2}\",np.log2(array2))"
+        "print(\"log2 of {array2}\",np.log2(array2))\n",
+        "print(\"exp of {array2}\",np.exp(array2))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3gG8w0B1_4MF",
-        "outputId": "4557833b-2557-4f62-e9dd-650796d9fabc"
+        "outputId": "c0a9217f-ecf6-4f3c-d71b-881426a421e1"
       },
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +334,8 @@
           "text": [
             "sin of {array2} [-0.7568025  -0.95892427 -0.2794155 ]\n",
             "log of {array2} [1.38629436 1.60943791 1.79175947]\n",
-            "log2 of {array2} [2.         2.32192809 2.5849625 ]\n"
+            "log2 of {array2} [2.         2.32192809 2.5849625 ]\n",
+            "exp of {array2} [ 54.59815003 148.4131591  403.42879349]\n"
           ]
         }
       ]
