--- a/Lab04_AIML.ipynb
+++ b/Lab04_AIML.ipynb
@@ -21,6 +21,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Bethi Naveen Kumar**\n",
+        "\n",
+        "**2303A52093**\n",
+        "\n",
+        "**Batch:33**"
+      ],
+      "metadata": {
+        "id": "cWXB_NLrO8S3"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "w2v5jGPbKduk"
       },
